tests/gen-test/test_out/swap-macro.txt
error: type mismatch
  --> swap-macro\root.ctl:41:18
   |
41 |         ptr\read(s.lexer)
   |                  ^^^^^^^ mismatch occurred here
   |
   = info: expected '^1\MacroLexer' but got '1\MacroLexer'

error: missing spec functions
  --> swap-macro\root.ctl:24:1
   |
24 | / impl TokenMacro for Swap {
25 | |     fn new(s: ^Self, lexer: MacroLexer) {
26 | |         ptr\write(s, \{ state: \Two~\{ first: lexer.next(); second: lexer.next(
27 | |         ) }; lexer })
...  |
42 | |     }
43 | | }
   | |_^ this impl block does not implement all required functions
   |
   = help: functions that are missing: drop

error: expected 'struct' | 'fn' | 'spec' | 'enum' | 'impl' | '#' but got Macro
  --> swap-macro\root.ctl:48:1
   |
48 | swap! swap! fn -> main uint => 0 
   | ^^^^^ token located here
   |
   = info: grouped items -> list -> item

info: generated ir:


